# agent-coordinator

./: .gitignore  AGENT_PROMPT.md  LICENSE  MANIFEST.in  README.md  package-lock.json  package.json  pyproject.toml  vite.config.js
agent_msg/: __init__.py  activity.py  client.py  db.py  names.py  portal.html  server.py  tmux.py
agent_msg/static/: portal.css  portal.js
demo/: README.md  conversation.tape
docs/: agent-monitoring-plan.md  coordination-design.md  hive-visualization-spec.md  landscape.md  monitoring-implementation-spec.md  roadmap.md  rust-rewrite-plan.md
skills/claude/agent-msg-register/: SKILL.md
skills/claude/agent-msg-register/scripts/: register-claude-agent
skills/codex/agent-msg-register/: SKILL.md
skills/codex/agent-msg-register/agents/: openai.yaml
skills/codex/agent-msg-register/scripts/: register-codex-agent
tests/: test_activity.py  test_client.py  test_db.py  test_server.py  test_skill_helpers.py  test_spawn.py  test_teams.py
web/: portal.html  styles.css
web/src/: hive.js  main.js  shared.js
